# flask-project

./: .gitignore  README.md  requirements.txt  start.bat
blog/: __init__.py  auth.py  blog.py  db.py
blog/static/css/: create.css  edit_profile.css  index.css  normal.css  user_profile.css
blog/static/js/: user_profile.js
blog/templates/: base.html  edit_profile.html  user_doshboard.html
blog/templates/auth/: login.html  register.html
blog/templates/blog/: category.html  create.html  edit.html  edit_profile.html  index.html  post.html  user.html  user_doshboard.html
flask-project-main(esmaili)/: setup.cfg
flask-project-main(esmaili)/blog/: auth.py  blog.py
flask-project-main(esmaili)/blog/static/css/: index.css  user_profile.css
flask-project-main(esmaili)/blog/static/js/: user_profile.js
flask-project-main(esmaili)/blog/templates/: base.html  edit_profile.html  user_doshboard.html
flask-project-main(esmaili)/blog/templates/auth/: login.html  register.html
flask-project-main(esmaili)/blog/templates/blog/: index.html
flask-project-main/blog/: __init__.py  auth.py  blog.py
flask-project-main/blog/static/js/: bootstrap.js
flask-project-main/blog/templates/: add_user.html  enter_password.html  error.html  login.html  show.html
