[metadata]
name = blog
version = 1.0.0
url = https://github.com/sadeghesfahani/flask-project
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = sadeghesfahani.sina@gmail.com
description = this is our first flask project
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    pymongo

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr
